# BSPParser

./: .gitignore  .gitmodules  BSPParser.cpp  BSPParser.h  BSPParser.hpp  CMakeLists.txt  CMakePresets.json  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  premake5_include.lua
.github/workflows/: doxygen.yml
Displacements/: Displacements.cpp  Displacements.h  NormalBlending.cpp  Positions.cpp  SubEdgeIterator.cpp  SubEdgeIterator.h  TBNGen.cpp  UVGen.cpp
Errors/: ParseError.cpp  ParseError.hpp  TriangulationError.cpp  TriangulationError.hpp
FileFormat/: Enums.h  Limits.h  Parser.cpp  Parser.h  Structs.h  Vector.cpp  Vector2D.cpp
src/: accessors.cpp  accessors.hpp  bsp.cpp  bsp.hpp  displacement-accessors.cpp  displacement-accessors.hpp  errors.hpp  face-accessors.cpp  face-accessors.hpp  limits.hpp  phys-model.hpp  prop-accessors.hpp  texture-accessors.hpp  vertex.hpp
src/accessors/: calculate-tangent.cpp  calculate-tangent.hpp  calculate-uvs.cpp  calculate-uvs.hpp  face-accessors.cpp  face-accessors.hpp  face-triangulation.cpp  face-triangulation.hpp  get-vertex-position.cpp  get-vertex-position.hpp  prop-accessors.cpp  prop-accessors.hpp  texture-accessors.cpp  texture-accessors.hpp  vertex.hpp
src/accessors/displacements/: calculate-normal.cpp  displacement.cpp  displacement.hpp  indices.cpp  indices.hpp  vertices.cpp  vertices.hpp
src/displacements/: generate-internal-normals.cpp  normal-blending.cpp  normal-blending.hpp  smooth-neighbouring-normals.cpp  sub-edge-iterator.cpp  sub-edge-iterator.hpp  triangulate.cpp  triangulated-displacement.cpp  triangulated-displacement.hpp
src/enums/: lump.hpp  props.hpp  surface.hpp  zip.hpp
src/helpers/: calculate-tangent.cpp  calculate-tangent.hpp  calculate-uvs.cpp  calculate-uvs.hpp  check-bounds.hpp  get-vertex-position.cpp  get-vertex-position.hpp  offset-data-view.cpp  offset-data-view.hpp  vector-maths.hpp  zip.cpp  zip.hpp
src/structs/: brushes.hpp  common.hpp  detail-props.hpp  displacements.hpp  geometry.hpp  headers.hpp  models.hpp  physics.hpp  static-props.hpp  textures.hpp  zip.hpp
